# moltis

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  browser-automation.html  changelog.html  configuration.html  fly.toml  mcp.html  moltis.toml  print.html  render.yaml  searchindex.js  toc.html  toc.js  voice.html  whatsapp.html
.claude/: settings.json
.do/: deploy.template.yaml
.github/workflows/: ci.yml
00/c9568a8451/: metadata.json
00/c9568a8451/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
01/16f75fbec8/0/: content_hash.txt  full.jsonl
01/5ed9f487a8/: metadata.json
04/9fe6576122/: metadata.json
16/44caeed36c/: metadata.json
1c/a09728eadc/: metadata.json
20/1f256d35f6/: metadata.json
25/0e2394419e/: metadata.json
32/2e0e2dd780/: metadata.json
38/05d12dd8e0/: metadata.json
40/e6bfcb2c8b/: metadata.json
4e/7d4640a601/: metadata.json
67/91208079ab/: metadata.json
6c/9efea7dff0/: metadata.json
7b/0b05ac2439/: metadata.json
7c/13786e89d1/: metadata.json
7e/e249a3ee8b/: metadata.json
81/5cec2cbf55/: metadata.json
84/af645890fb/: metadata.json
92/101f312ace/: metadata.json
92/acda0c4470/: metadata.json
97/9e6644c8df/: metadata.json
98/5690b06f1c/: metadata.json
a5/0114cec0cd/: metadata.json
ad/8f04c3aebd/: metadata.json
ae/37daceba43/: metadata.json
b5/29b4160008/: metadata.json
b8/dd272a25fd/: metadata.json
cb/dc165645d0/: metadata.json
cb/fd7c305781/: metadata.json
cf/73a4d59610/: metadata.json
crates/cli/: Cargo.toml
crates/crm/: Cargo.toml
crates/crm/migrations/: 20260317000000_init.sql  20260317000001_crm_types.sql  20260318000000_matters_filter_indexes.sql
crates/crm/src/: error.rs  lib.rs  store.rs  store_memory.rs  store_sqlite.rs  types.rs
crates/gateway/: Cargo.toml
crates/symphony/: Cargo.toml
crates/web/: Cargo.toml
crates/web/src/: templates.rs
crates/web/src/assets/js/: app.js  i18n.js  nav-counts.js  onboarding-view.js  page-crm.js  page-settings.js
crates/web/src/assets/js/locales/en/: crm.js
crates/web/src/assets/js/locales/fr/: crm.js
crates/web/src/assets/js/locales/zh/: crm.js
crates/web/src/templates/: index.html
crates/web/ui/e2e/specs/: websocket.spec.js
d3/88fe498f1c/: metadata.json
docs/src/: SUMMARY.md  memory-comparison.md  memory.md  symphony.md
ea/8f8bbc14af/: metadata.json
ed/c40c99a904/: metadata.json
ed/ea0a2fe981/: metadata.json
plans/: 2026-03-17-ceo-review-crm-contacts-rpc.md  2026-03-17-plan-crm-matters-rpc-methods.md  CHA-19-ceo-review-v2.md
scripts/: build-swift-bridge.sh
(+301 files in other folders)
