[package]
edition.workspace = true
name              = "moltis-crm"
version.workspace = true

[dependencies]
async-trait    = { workspace = true }
moltis-metrics = { optional = true, workspace = true }
secrecy        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sqlx           = { workspace = true }
thiserror      = { workspace = true }
time           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { features = ["rt", "macros"], workspace = true }

[features]
default = []
metrics = ["dep:moltis-metrics"]
tracing = []

[lints]
workspace = true
